bottom images overflow issue resolved

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ main {
   grid-gap: 2px;
 }
 
-.content-wrapper > div > img {
+.content-wrapper > div > a > img {
   width: 100%;
 }
 
